Mock splash video: fix issue where wider-than-square brand logos were squashed

--- a/src/style/demo/MockFeed.less
+++ b/src/style/demo/MockFeed.less
@@ -22,6 +22,7 @@
 			width: 5em;
 			height: 5em;
 			position: relative; // make carousel position/size reference for charities
+			object-fit: contain;
 		}
 
 		animation-name: wave-in;
@@ -108,6 +109,7 @@
 				width: 2em;
 				height: 2em;
 				border-radius: 50%;
+				object-fit: contain;
 			}
 			.brand-id-text {
 				margin-left: 1em;
